--- a/static/global.css
+++ b/static/global.css
@@ -12,6 +12,11 @@
   --t-normal: 0.5s;
   --t-slow: 1s;
   --t-slug: 3s;
+  --fs-200: clamp(0.8em, 2.4vw, 1.2944rem);
+  --fs-400: clamp(1em, 3vw, 1.618rem);
+  --fs-700: clamp(1.4rem, 4.2vw, 2.2652rem);
+  --fs-900: clamp(1.7rem, 5.1vw, 2.7506rem);
+  --w-max: 80ch;
 }
 
 ::-webkit-scrollbar {
@@ -32,7 +37,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
-  font-size: clamp(0.95rem, 4vw, 1.3rem);
+  font-size: var(--fs-400);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -40,6 +45,7 @@ html,
 body {
   margin: 0;
   height: 100%;
+  font-size: 1rem;
 }
 
 body {
@@ -49,31 +55,29 @@ body {
 h1,
 h2,
 h3,
-h4,
-h5,
-h6,
 p {
-  margin: 0;
+  margin: 1rem 0;
   padding: 0;
 }
 h1 {
-  margin: 1rem 0 1rem 0;
+  font-size: var(--fs-900);
   font-weight: 900;
-  font-size: clamp(1.6rem, 7vw, 2.5rem);
 }
 h1 span {
-  margin: 1rem 0;
   font-size: 1.3em;
 }
 h2 {
-  font-size: clamp(1.4rem, 2vw, 1.7rem);
+  font-size: var(--fs-700);
+  font-weight: bold;
 }
 h3 {
-  font-size: clamp(1.2rem, 2vw, 1.5rem);
+  font-weight: bold;
 }
 p {
-  margin: 1rem 0;
   line-height: 1.5;
+}
+a {
+  color: inherit;
 }
 
 img {
@@ -86,55 +90,5 @@ button {
 }
 
 section {
-  padding: 1rem;
   color: var(--c-white);
-}
-@media (min-width: 600px) {
-  section {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    padding: 2rem 0;
-  }
-}
-
-.box {
-  --bg: rgba(255, 255, 255, 0.1);
-  --bg-hover: rgba(255, 255, 255, 0.2);
-  position: relative;
-  border-radius: 10px;
-  background-color: var(--bg);
-}
-.box * {
-  color: var(--c-white);
-}
-
-/* background gradient transition */
-.box::after {
-  content: '';
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  background: linear-gradient(125deg, transparent 0%, var(--bg-hover) 100%);
-  transition: opacity var(--t-fast);
-}
-.box:hover::after {
-  opacity: 1;
-}
-
-.ghost * {
-  color: var(--c-white);
-}
-.ghost p {
-  margin: 1rem 0;
-}
-.ghost h2 {
-  margin-top: 2rem;
-}
-.ghost h3 {
-  margin-top: 1.5rem;
 }
